--- a/index.html
+++ b/index.html
@@ -428,7 +428,9 @@
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
               <i class="bi bi-clock"></i>
               <h4>Open Hours:</h4>
-              <p>Monday-Saturday:<br>11:00 AM - 2300 PM</p>
+              <p>Selasa-Jum`at:<br>18:00 WIB - 22:00 WIB</p><br>
+              <p>Sabtu</p><br>18:00 WIB - 23:00 WIB</p><br>
+              <p>Minggu</p><br>18:00 WIB - 22:00 WIB</p>
             </div>
 
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
