--- a/index.html
+++ b/index.html
@@ -406,6 +406,22 @@
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-weekend">
+            <div class="menu-content">
+              <a href="#">Otak-otak Khas Bangka</a><span>10K</span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-weekend">
+            <div class="menu-content">
+              <a href="#">Lenggang Panggang</a><span>30K</span>
+            </div>
+            <div class="menu-ingredients">
+            </div>
+          </div>
+
         </div>
 
       </div>
