--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
               <li data-filter=".filter-salads">Minuman</li>
               <li data-filter=".filter-specialty">kopi Jaga</li>
               <li data-filter=".filter-potato">Potato Corner</li>
+              <li data-filter=".filter-weekend">Khusus Weekend</li>
             </ul>
           </div>
         </div>
