--- a/index.html
+++ b/index.html
@@ -145,6 +145,14 @@
           </div>
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
+              <a href="#">Pempek Kapal Selam Biasa</a><span>20K</span>
+            </div>
+            <div class="menu-ingredients">
+              
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-starters">
+            <div class="menu-content">
               <a href="#">Pempek Andaan Spesial</a><span>10K</span>
             </div>
             <div class="menu-ingredients">
@@ -184,7 +192,7 @@
           </div>
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="#">Pempek Kapal Selam</a><span>35K</span>
+              <a href="#">Pempek Kapal Selam Spesial</a><span>35K</span>
             </div>
             <div class="menu-ingredients">
               
