--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
               
             </div>
           </div>
+          </div>
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
               <a href="#">Matcha</a><span>23K</span>
