--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
       <h3>Pempek Mami Rika</h3><br>
       <div class="social-links">
         <a href="https://www.instagram.com/pempekmamirika" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/rikakartinia.23" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright 2021. All Rights Reserved
